# dlsite-rs-next

./: CHANGELOG.md  CRATES_IO_PUBLISH_CHECKLIST.md  Cargo.toml  MIGRATION.md  README.md
.claude/agent-memory/api-surface-expander/: MEMORY.md  project_codebase_patterns.md
.claude/agents/: api-surface-expander.md  auth-play-architect.md  repo-auditor.md  schema-hardening-reviewer.md
.github/workflows/: ci.yml
docs/: dlsite_endpoint_inventory.md  dlsite_gap_analysis.md
scripts/: check.sh
src/: cache.rs  error.rs  lib.rs  retry.rs
src/adapters/: download.rs  mod.rs  play_library.rs  viewer.rs
src/client/: mod.rs
src/client/auth/: mod.rs
src/client/circle/: mod.rs  query.rs
src/client/play/: mod.rs
src/client/product/: mod.rs
src/client/product_api/: mod.rs
src/client/ranking/: mod.rs
src/client/search/: mod.rs  query.rs  selectors.rs
src/client/search/snapshots/: dlsite_rs__client__search__tests__snapshot_discounted_product.snap  dlsite_rs__client__search__tests__snapshot_normal_product.snap
src/client/user/: mod.rs
src/interface/: mod.rs  product.rs  query.rs  site.rs
tests/: download_handoff_mock.rs  live_smoke.rs  play_library_mock.rs  public_catalog_mock.rs  search_client_mock.rs  unit.rs  viewer_mock.rs
tests/common/: mod.rs
tests/fixtures/download/: redirect_download.txt  redirect_serial.txt  redirect_split.txt
tests/fixtures/play/v3_content_count/: basic.json  empty.json
tests/fixtures/play/v3_content_sales/: page1.json  page2.json
tests/fixtures/play/v3_content_works/: partial_missing.json
tests/fixtures/public/product_api/: RJ403038.json  VJ01000513.json
tests/fixtures/public/product_info_ajax/: RJ01017217.json  RJ403038.json
tests/fixtures/search/: adult_product.html  discounted_product.html  no_creator.html  no_review_no_rating.html  normal_product.html  r15_product.html  search_result_list.html
tests/fixtures/viewer/: token_success.json  token_unavailable.json
